--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 .DS_Store
 Pods
+.UserInterfaceState.xcuserstate
+.*gitignore
+Splint.xcworkspace/xcshareddata
+Splint.xcworkspace/xcuserdata
+output
